<resources>
    <string name="app_name" translatable="true">PHC</string>

    <string name="login_pref_name">com.gonder.pregnancyhealthcare</string>
    <string name="logged_in_user">logged.in.user</string>
    <string name="user_type">user.type</string>
    <string name="login_status">login.status</string>

    <string name="admin" translatable="true">አስተዳዳሪ</string>
    <string name="user">ነብሰ ጡር</string>
    <string name="doctor">የጤና ባለሙያ</string>
    <string name="lab_technician" translatable="false">ላብ ቴክኒሻን</string>
    <string name="username">መለያ ስምዎን ያስገቡ</string>
    <string name="choose_role">ድርሻዎን ይምረጡ</string>
    <string name="choose_status">Choose Status</string>
    <string name="pre_natal">Pre Natal</string>
    <string name="post_natal">Post Natal</string>
    <string name="password">የይለፍ ቃልዎን ያስገቡ</string>
    <string name="login">ይግቡ</string>
    <string name="register">ይመዝገቡ</string>
    <string name="login_image">Avatar Image</string>
    <string name="your_role">እርሶ ማኖት?</string>
    <string name="firstname">ስም</string>
    <string name="fullname">ሙሉ ስም</string>
    <string name="email">የኢሜል አድራሻ</string>
    <string name="lastname">የአባት ስም</string>
    <string name="confirm_password">የይለፍ ቃልዎን ያረጋግጡ</string>
    <string name="phone">ስልክ ቁጥር</string>
    <string name="title_activity_dash_board1">DashBoard1</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">ማስተካከያ</string>
    <string name="search">ፍላጋ</string>
    <string name="share">ያጋሩ</string>
    <string name="setting">ማስተካከያ</string>
    <string name="manage_account">መቆጣጠሪያ</string>
    <string name="title_activity_clerk_nav_drawer">ClerkNavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ተቆጣጣሪ</string>
    <string name="nav_header_subtitle">ጥላሁን መኮንን</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">መግቢያ</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="send_report">ሪፖርት ያድርጉ</string>
    <string name="notification">አዲስ ነገር</string>
    <string name="broadcast">ብሮድካስት</string>
    <string name="get_report">ሪፖርት ይዩ</string>
    <string name="register_btn">ይመዝግቡ</string>
    <string name="view_list">ዝርዝር </string>
    <string name="consultation">ክትትል</string>
    <string name="due_date_calculator">የውሊድ ቀን ግምት</string>
    <string name="show">Show</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_to_search">Search</string>
    <string name="age">እድሜ</string>
    <string name="goto_home">ወደ መግቢያ ገጽ</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="version">Version</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="assign_physician">Assign Physician</string>
    <string name="ver">vr 1.0</string>
    <string name="generate_report">Generate Report</string>

    <string name="fullname_cannot_be_empty">Fullname cannot be empty!</string>
    <string name="phone_cannot_be_empty">Phone cannot be empty!</string>
    <string name="username_cannot_be_empty">Username cannot be empty!</string>
    <string name="password_cannot_be_empty">Password cannot be empty!</string>
    <string name="confirm_password_cannot_be_empty">Confirm Password cannot be empty!</string>
    <string name="age_cannot_be_empty">Age cannot be empty!</string>
    <string name="physician_must_be_selected">Physician must be selected!</string>
    <string name="role_must_be_selected">Role must be selected!</string>
    <string name="status_must_be_selected">Status must be selected!</string>
    <string name="password_and_c_password_must_match">Password does not match!</string>
    <string name="username_cannot_be_lessthan_6">Username must be at least 6 character</string>
    <string name="password_cannot_be_lessthan_6">Password must be at least 6 character</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>


</resources>
